# Separable-Gamma-CFAR

./: .gitignore  README.md  codex_neurobench_plan.md  environment.cpu.yml  environment.gpu.yml  environment.yml  main.py  pyproject.toml  requirements-dev.txt  utils.py  worker.py
core/: filters.py
docs/: ANNOTATION_SCHEMA.md  API_REFERENCE.md  ARCHITECTURE_LAB.md  DATASET_QC.md  INVERSE_DYNAMICS_EXPORT.md  METRICS_AUDIT.md  NEURON_WORKBENCH.md  PROCESSING_NOTES.md  README.md  RESTING_VIDEO_ALGORITHM_BRIEF.md  SOTA_INTEGRATIONS.md  plan.md
evaluation/: metrics.py
examples/: architecture_runs.example.json  dataset_manifest.example.json  pipeline_spec.example.json
neurobench/: __init__.py  annotation_metrics.py  annotations.py  architecture_runs.py  manifests.py  online.py  pipeline_catalog.py  proposal_analysis.py  review_batches.py  review_reports.py  sweep_packs.py
reporting/: grid_search_summary.py
schemas/: annotations.schema.json  architecture_run.schema.json  artifact_record.schema.json  dataset_manifest.schema.json  export_bundle.schema.json  metrics_report.schema.json  pipeline_run.schema.json  pipeline_spec.schema.json  review_data.schema.json
tests/: conftest.py  test_active_learning.py  test_annotation_agreement.py  test_annotation_exports.py  test_annotation_metrics.py  test_annotations_model.py  test_api_reference_generation.py  test_architecture_runs.py  test_artifact_store.py  test_behavior_alignment.py  test_candidate_clustering.py  test_candidate_feature_table.py  test_candidate_ranking.py  test_cfar_algorithm.py  test_chunked_processing.py  (+49 more)
(+100 files in other folders)
